NodeJS-Starter-V1/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ccw-erp
  labels:
    name: ccw-erp
    environment: production
    app: ccw-online-erp
